--- a/ZSözlük/Views/Shared/_LoginInfo.cshtml
+++ b/ZSözlük/Views/Shared/_LoginInfo.cshtml
@@ -8,6 +8,7 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" asp-action="MyProfile" asp-controller="Sozluk">Profilim</a>
+                <a class="dropdown-item" asp-action="ChangePassword" asp-controller="Account">Şifre Değiştir</a>
                 <a class="dropdown-item" asp-action="Logout" asp-controller="Account">Çıkış Yap</a>
             </div>
         </li>
